# sfalib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: alphabet.h  boolean_algebra.h  evidence_automaton.h  obstable.h  oracle.h  predicate.h  sfa.h  word.h
tests/: CMakeLists.txt  interval_algebra.cpp  predicate.cpp  test_obstable_fill.cpp  test_word.cpp
tests/cmake/: CodeCoverage.cmake
